# morus_uav_gazebo

./: .gitignore  README.md
morus_control/: CMakeLists.txt  package.xml
morus_control/config/: LinearMPC.cfg  morus_control.yaml
morus_control/include/morus_control/: KFDisturbanceObserver.h  attitude_mpc_ctl.h  attitude_mpc_ctl_node.h  attitude_teleop_joy.h  mass_ctl_attitude_mpc.h  mass_ctl_attitude_mpc_node.h  solver.h  steady_state_calculation.h
morus_control/launch/: morus_control.launch  morus_control_mpc.launch
morus_control/lib/: ldl.c  matrix_support.c  solver.c  util.c
morus_control/src/: KFDisturbanceObserver.cpp  attitude_mpc_ctl.cpp  attitude_teleop_joy.cpp  height_yaw_ctl.py  mass_ctl_attitude_mpc.cpp  mass_ctl_attitude_mpc.py  steady_state_calculation.cpp
morus_control/src/nodes/: attitude_mpc_ctl_node.cpp  mass_ctl_attitude_mpc_node.cpp
morus_description/urdf/: morus.urdf.xacro
morus_gazebo/: CMakeLists.txt
morus_gazebo/launch/: morus_multirotor_empty_world_ctl_debug.launch  morus_multirotor_empty_world_ctl_joy.launch  morus_multirotor_empty_world_ctl_mpc.launch
morus_msgs/msg/: CommandMovingMasses.msg
